--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     def navigation_version = "2.2.2"
     def room_version = "2.2.5"
+    def recyclerview_version = "1.1.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -65,6 +66,9 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
+
+    // RecyclerView
+    implementation  "androidx.recyclerview:recyclerview:$recyclerview_version"
 
 
     testImplementation 'junit:junit:4.12'
