--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+
+    // ViewModel and LiveData
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     // Navigation
@@ -73,6 +75,9 @@ dependencies {
 
     // RecyclerView
     implementation  "androidx.recyclerview:recyclerview:$recyclerview_version"
+
+    // Material components theme
+    implementation "com.google.android.material:material:1.1.0"
 
 
     testImplementation 'junit:junit:4.12'
