--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,10 +72,12 @@ dependencies {
     // Room components
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     kapt "androidx.room:room-compiler:$room_version"
 
     // RecyclerView
-    implementation  "androidx.recyclerview:recyclerview:$recyclerview_version"
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
 
     // Material components theme
     implementation "com.google.android.material:material:1.1.0"
