--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,18 +44,22 @@ android {
 }
 
 dependencies {
-
-    def navigation_version = "2.2.2"
-    def room_version = "2.2.5"
-    def recyclerview_version = "1.1.0"
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    // Vector Drawable
+    implementation "androidx.vectordrawable:vectordrawable:$version_vector_drawable"
+
+    // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+
+    // Core with Ktx
+    implementation "androidx.core:core-ktx:$version_core_ktx"
+
+    // AppCompat
+    implementation "androidx.appcompat:appcompat:$version_app_compat"
+
+    // Constraint Layout
+    implementation "androidx.constraintlayout:constraintlayout:$version_constraint_layout"
 
     // ViewModel and LiveData
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -80,8 +84,11 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
 
     // Material components theme
-    implementation "com.google.android.material:material:1.1.0"
+    implementation "com.google.android.material:material:$version_material"
 
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
