--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext {
+        // Versions for all the dependencies we plan to use. It's particularly useful for kotlin and
+        // navigation where the versions of the plugin needs to be the same as the version of the
+        // library defined in the app Gradle file
+        kotlin_version = '1.3.72'
+        version_kotlin_coroutines = "1.1.0"
+        navigation_version = "2.2.2"
+        room_version = "2.2.5"
+        recyclerview_version = "1.1.0"
+        version_constraint_layout = "1.1.3"
+        version_material = "1.1.0"
+        version_app_compat = "1.1.0"
+        version_core_ktx = "1.2.0"
+        version_vector_drawable = "1.1.0"
+    }
     repositories {
         google()
         jcenter()
