--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,19 +47,19 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Vector Drawable
-    implementation "androidx.vectordrawable:vectordrawable:$version_vector_drawable"
+    implementation "androidx.vectordrawable:vectordrawable:$vector_drawable_version"
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Core with Ktx
-    implementation "androidx.core:core-ktx:$version_core_ktx"
+    implementation "androidx.core:core-ktx:$core_ktx_version"
 
     // AppCompat
-    implementation "androidx.appcompat:appcompat:$version_app_compat"
+    implementation "androidx.appcompat:appcompat:$app_compat_version"
 
     // Constraint Layout
-    implementation "androidx.constraintlayout:constraintlayout:$version_constraint_layout"
+    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
 
     // ViewModel and LiveData
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -84,11 +84,11 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
 
     // Material components theme
-    implementation "com.google.android.material:material:$version_material"
+    implementation "com.google.android.material:material:$material_version"
 
     // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
 
     // Local Unit Testing
     testImplementation 'junit:junit:4.12'
