--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,15 @@ buildscript {
         // navigation where the versions of the plugin needs to be the same as the version of the
         // library defined in the app Gradle file
         kotlin_version = '1.3.72'
-        version_kotlin_coroutines = "1.1.0"
-        navigation_version = "2.2.2"
+        kotlin_coroutines_version = "1.3.7"
+        navigation_version = "2.3.0"
         room_version = "2.2.5"
         recyclerview_version = "1.1.0"
-        version_constraint_layout = "1.1.3"
-        version_material = "1.1.0"
-        version_app_compat = "1.1.0"
-        version_core_ktx = "1.2.0"
-        version_vector_drawable = "1.1.0"
+        constraint_layout_version = "2.0.1"
+        material_version = "1.2.1"
+        app_compat_version = "1.2.0"
+        core_ktx_version = "1.3.1"
+        vector_drawable_version = "1.1.0"
     }
     repositories {
         google()
